--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
             btn_stop.removeAttribute('disabled');
             playCam();
         }
+
         btn_stop.onclick = () => {
             btn_stop.setAttribute('disabled', 'true');
             btn_play.removeAttribute('disabled');
@@ -134,6 +135,16 @@
         }
         getCameraSelection();
 
+        if ('mediaDevices' in navigator && navigator.mediaDevices.getUserMedia) {
+            const updatedConstraints = {
+                ...constraints,
+                deviceId: {
+                    exact: cameraOptions.value
+                }
+            };
+            playCam();
+        }
+
         cameraOptions.onchange = () => {
             const updatedConstraints = {
                 ...constraints,
@@ -141,8 +152,10 @@
                     exact: cameraOptions.value
                 }
             };
-        startStream(updatedConstraints);
+            playCam();
         };
+
+        
     </script>
 </body>
 
